--- a/travel-journal/frontend/src/components/page/RegisterPage/RegisterPage.css
+++ b/travel-journal/frontend/src/components/page/RegisterPage/RegisterPage.css
@@ -1,6 +1,6 @@
 .register-background {
   position: relative;
-  background: url("D:/AWS/Travel_journal/travel-journal/frontend/src/assests/images/loginBeachbackground.jpg") no-repeat center center/cover;
+  background: url("../../../assests/images/loginBeachbackground.jpg") no-repeat center center/cover;
   min-height: 100vh;
   display: flex;
   align-items: center;
